# Fast_API_Test_Project

./: sc.py
backend/: .env  main.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: aab5d9340617_create_initial_fresh_tables.py
backend/app/: app.py  config.py  db.py  models.py  security.py  supabase_storage.py
backend/app/routes/: auth_routes.py  docs_routes.py  rooms_route.py  user_routes.py
backend/app/schemas/: rooms.py  user.py
frontend/app/: page.tsx
frontend/app/dashboard/: page.tsx
frontend/app/login/: page.tsx
frontend/components/: RoomCard.tsx
frontend/lib/api/: rooms.ts
